assets/css/style.css
/* Google fonts */
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

:root {
 /*---------- FONTS STYLE ----------*/
 --content-text: 'Montserrat', sans-serif;
  
/*---------- COLOURS ----------*/
    --black: #000000;
    --oxford-blue: #000026;
    --baby-white: #FDFFFC;
    --pink: #f45bc9;
    --hover-bg: #c3d0e9;
    --crisler-blue-light: #7249ef;
    --medium-slate-blue: #7968ff;
    --crisler-blue: #3B0CCA;
    --lavender-web: #F1ECFD;
    --periwinkle: #D7C8F9;
    --mauve: #BDA5F6;
    --payne-grey: #637081;
    --correct:#28a745;
    --incorrect:#dc3545;
  }

/* Removes margins and padding */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
  }

/* Full screen */
html,
body {
  height: 100%;
}

/* Background image with a background colour to show if the image cannot load*/
body {
  background-color: var(--oxford-blue);
  font-family: var(--content-text);
  background: url("../images/background.jpg") no-repeat center center;
  background-size: cover;
  text-align: center;
  }

/*---------- LOGO SECTION ----------*/
.heading {
    text-align: center;
    font-size: 2.5rem;
    margin-top: 1.5em;
}

.logo {
    height: 100px;
    -webkit-filter: drop-shadow(5px 5px 5px var(--crisler-blue));
    filter: drop-shadow(5px 5px 5px var(--crisler-blue));
}

/*---------- HEADINGS & TEXT ----------*/
  h2 {
    font-size: 2rem;
    text-align: center;
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
  
  p {
    text-align: center;
    font-size: 1rem;
    padding: 0.5em 2em;
  }
  
  a {
    text-decoration: none;
  }

/*---------- CONTAINERS ----------*/

/* Flex container*/
.flex-container {
    display: flex;
    flex-direction: column;
    width: 100vw;
    height: 100vh;
    justify-content: center;
    align-content: center;
  }

/* Outer Container */
.outer-container {
    background-color: var(--payne-grey);
    opacity: 0.9;
    width: 80%;
    margin: auto;
    padding: 1rem;
    color: var(--baby-white);
    border-radius: 1.5rem;
    border: 0.7rem solid var(--baby-white);  /* Thick border outside the box */
    -webkit-filter: drop-shadow(5px 5px 5px var(--crisler-blue));
    filter: drop-shadow(5px 5px 5px var(--crisler-blue));

    display: flex;
    justify-content:center;
    align-items: center;
    min-height: 50vh;
    flex-direction: column;
  }
  
  /* Button Groups */
  .buttons-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    width: 100%;
  }

  /*---------- BUTTON STYLING ----------*/

.btn {
    font-family: var(--content-text);
    font-weight: 500;
    text-align: center;
    padding: 0.75rem;
    background-color: var(--oxford-blue);
    border-radius: 2rem;
    color: var(--baby-white);
    margin: 0.3rem;
    box-shadow: -2px -2px 5px var(--baby-white) inset;
    cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🎮</text></svg>") 16 0,auto; /*!emojicursor.app*/
    font-size: 1.5rem;
    margin: 0.5rem;
  }

.hover-button:hover,
.choice-container:hover {
    /*   box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5) inset;*/
    box-shadow: -2px -2px 5px rgba(86, 185, 235, 0.5) inset;
    transform: translateY(-0.1rem);
    transition: transform 150ms;
    background-color: var( --hover-bg);
    color: var(--black);
    font-weight: bold;
  }

.btn[disabled]:hover {
    cursor: not-allowed;
    box-shadow: none;
    transform: none;
}  

/* for buttons A, B, C, D*/
.choice-container {
    display: flex;
}
.choice-prefix{
background-color: var(--baby-white); 
opacity: 0.7;
color: var(--oxford-blue);
font-weight: bold;
border-radius: 2em 0em 0em 2em;
margin: -0.75em;
padding-top: 1.3em;
  }

.choice-text {
  width: 100%;/*to load a new question when clicking it*/
}


/* FORMS */
form {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  input {
    margin-bottom: 1rem;
    width: 20rem;
    padding: 1.5rem;
    font-size: 1.8rem;
    border: none;
    box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
  }
  
  input::placeholder {
    color: #aaa;
  }

/*---------- CORRECT & INCORRECT FEEDBACK CLASSES ----------*/
/*important so this overwrites the hover effect*/
.correct {
    background-color:var(--correct)!important;
    color: var(--baby-white)!important;
  }
  
.incorrect {
    background-color:var(--incorrect)!important;
    color: var(--baby-white)!important;
  }

/*---------- MODALS ----------*/
/* tutorial - https://www.youtube.com/watch?v=XH5OW46yO8I*/

#modal-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--payne-grey);
    opacity: 0; /* This hides the content in the modal*/
    pointer-events: none;
    transition: opacity 0.5s ease;
  }
  
  /* Change the modal opacity to be visible so it will show the content and set it back to default*/
  #modal-container.show {
    opacity: 1;
    pointer-events: auto;
  }
  
  /* Add a border with rounded corners and padding around the modal content */
  #modal-content {
    width: 80%;
    border: var(--mauve) 5px solid;
    border-radius: 1.5rem;
    padding: 2rem;
    color: var(--baby-white);
    text-align: center;
  }
  
  /* Add margin to top of close modal button */
  #close-modal {
    margin-top: 3rem;
  }

/* ---------- HUD ----------*/

#hud {
    display: flex;
    justify-content: space-between;
  }
  
  .hud-prefix {
    text-align: center;
    font-size: 2rem;
  }
  
  .hud-main-text {
    text-align: center;
  }

/*---------- LOADER ----------*/
#loader {
    border: 1.6rem solid white;
    border-radius: 50%;
    border-top: 1.6rem solid #56a5eb;
    width: 12rem;
    height: 12rem;
    animation: spin 2s linear infinite;
  }
  
  @keyframes spin {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }

/*---------- TO HIDE CONTENT ----------*/
  .hidden {
    display: none;
  }

/*---------- HIGH SCORES ----------*/
  #highScoresList {
    list-style: none;
    padding-left: 0;
    margin-bottom: 4rem;
  }
  
  .high-score {
    font-size: 2.8rem;
    margin-bottom: 0.5rem;
  }
  
  .high-score:hover {
    transform: scale(1.025);
  }

/*---------- MEDIA QUERIES ----------*/
@media screen and (max-width:  700px) {
	.hud-prefix {
		font-size: unset;
	}
}

/* Medium-small screens */
@media screen and (max-width: 500px) {
  .logo {
    height: 2em;
}
}

@media screen and (max-width: 420px) {
h2{
    font-size: 1.8rem;
}

    p {
    font-size: 0.9rem;
}

.btn {
    font-size: 1rem;
}
}

/* Small screens */
@media screen and (max-width: 375px) {
  .logo {
    height: 1.7em;
}

body {
    background: var(--crisler-blue-light);
}
}

